# biocg_web

./: Dockerfile  README.md  pyproject.toml
src/biocg_web/: __init__.py  _version.py  app.py
src/biocg_web/assets/: __init__.py
src/biocg_web/pages/: index.py
